--- a/index.ejs
+++ b/index.ejs
@@ -5,24 +5,29 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Posts</title>
+	<script src=" https://cdn.jsdelivr.net/npm/@picocss/pico@1.5.10/css/postcss.config.min.js "></script>
+	<link href=" https://cdn.jsdelivr.net/npm/@picocss/pico@1.5.10/css/pico.min.css " rel="stylesheet">
 </head>
 
 <body>
 
-	<h1>Posts</h1>
+	<main class="container">
 
-	<ul>
-		<% posts.forEach(function(post){ %>
-			<li>
-				<%= post.text %>
-			</li>
-			<% }); %>
-	</ul>
+		<h1>Posts</h1>
 
-	<form action="/posts" method="POST">
-		<textarea name="text"></textarea>
-		<button type="submit">Post</button>
-	</form>
+		<ul>
+			<% posts.forEach(function(post){ %>
+				<li>
+					<%= post.text %>
+				</li>
+				<% }); %>
+		</ul>
+
+		<form action="/posts" method="POST">
+			<textarea name="text"></textarea>
+			<button type="submit">Post</button>
+		</form>
+	</main>
 </body>
 
 </html>
